fix safari alignment issues

--- a/docs/css/creative.css
+++ b/docs/css/creative.css
@@ -503,6 +503,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
 .titleText {
